--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,16 +7,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'home/styles.css' %}">
 </head>
 <body>
-    <h1>Home Page</h1>
-    {% if user.is_authenticated %}
-        <p>Welcome, {{ user.username }}</p>
-        <a href="/profile">Profile</a>
-        <a href="/logout">Logout</a>
-    {%else%}
-        <p>Welcome, Sneaky User!</p>
-        <a href="/login">Login</a> or <a href="/register">Register</a>
-    {% endif %}
+<div class="container">
+    <h1>DevSearchey</h1>
+    <div class="welcome-message">
+        {% if user.is_authenticated %}
+            <h2 class="welcome-user">Welcome, {{ user.username }}</h2>
+            <img src="{{ user.profile.avatar.url }}" alt="Avatar" class="avatar-image">
+            <button class="profile-button" onclick="location.href='/profile'">Profile</button>
+            <button class="logout-button" onclick="location.href='/logout'">Logout</button>
+        {% else %}
+            <p class="welcome-user">Welcome, Sneaky User!</p>
+            <button class="login-home" onclick="location.href='/login'">Login</button>
+            <p class="or">or</p>
+            <button class="register-home" onclick="location.href='/register'">Register</button>
+        {% endif %}
+    </div>
+</div>
 </body>
 </html>
