--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,13 +7,34 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'login/styles.css' %}">
 </head>
 <body>
-    <h1>Login Page</h1>
-    <form action="/login" method="post">
+<div class="container">
+    <h1>Hello Again!</h1>
+    <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <div class="form-group">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+        </div>
+        <div class="form-group">
+            {{ form.password.label_tag }}
+            {{ form.password }}
+            {% if form.non_field_errors %}
+            {% endif %}
+                <div class="error-message">
+                    {{ form.non_field_errors }}
+                </div>
+        </div>
         <button type="submit">Login</button>
     </form>
+    {% if form.non_field_errors %}
+        <div class="register-suggestion">
+            <p>Maybe you don't have an account?</p>
+            <button onclick="location.href='{% url 'register' %}'" class="btn btn-primary">Register</button>
+        </div>
+    {% endif %}
+</div>
 </body>
 </html>
