--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,49 +1,3 @@
-{#{% load static %}#}
-{#<!doctype html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <meta name="viewport"#}
-{#          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">#}
-{#    <meta http-equiv="X-UA-Compatible" content="ie=edge">#}
-{#    <title>Profile</title>#}
-{#    <link rel="stylesheet" type="text/css" href="{% static 'profile/styles.css' %}">#}
-{#</head>#}
-{#<body>#}
-{#<div class="container">#}
-{#    <h1>Profile</h1>#}
-{#    <form action="/profile" method="post" enctype="multipart/form-data">#}
-{#        {% csrf_token %}#}
-{#        <div class="form-group">#}
-{#            {{ form.avatar.label_tag }}#}
-{#            <img src="{{ avatar_url }}" alt="Avatar Preview" style="width: 100px; height: 100px; margin-bottom: 10px;"/>#}
-{#            <label for="id_avatar" class="custom-file-upload">Choose Avatar</label>#}
-{#            {{ form.avatar }}#}
-{#        </div>#}
-{#        {% for field in form %}#}
-{#            {% if field.name != 'avatar' %}#}
-{#                <div class="form-group">#}
-{#                    {{ field.label_tag }}#}
-{#                    {{ field }}#}
-{#                </div>#}
-{#            {% endif %}#}
-{#        {% endfor %}#}
-{#        <button type="submit">Update</button>#}
-{#    </form>#}
-{#    <form method="post" style="margin-top: 20px;" onsubmit="return confirmDeleteProfile();">#}
-{#        {% csrf_token %}#}
-{#        <button type="submit" name="delete_profile">Delete Profile</button>#}
-{#    </form>#}
-{#</div>#}
-{##}
-{#<script>#}
-{#    function confirmDeleteProfile() {#}
-{#        return confirm("Are you sure you want to delete your profile?");#}
-{#    }#}
-{#</script>#}
-{#</body>#}
-{#</html>#}
-
 {% load static %}
 <!doctype html>
 <html lang="en">
@@ -57,29 +11,40 @@
 </head>
 <body>
 <div class="container">
-    <h1>Profile</h1>
+    <h1>{{ user.username }}'s Profile</h1>
+    <img id="avatarPreview" src="{{ avatar_url }}" alt="Avatar Preview" class="avatar-preview"/>
     <form action="/profile" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
-            {{ form.avatar.label_tag }}
-            <img id="avatarPreview" src="{{ avatar_url }}" alt="Avatar Preview" style="width: 100px; height: 100px; margin-bottom: 10px;"/>
-            <label for="id_avatar" class="custom-file-upload">Choose Avatar</label>
-            {{ form.avatar }}
+
+            <label for="id_avatar" class="custom-file-upload">Choose Avatar Pic</label>
+            <p>{{ form.avatar }}</p>
         </div>
-        {% for field in form %}
-            {% if field.name != 'avatar' %}
-                <div class="form-group">
-                    {{ field.label_tag }}
-                    {{ field }}
-                </div>
-            {% endif %}
-        {% endfor %}
+        <div class="form-group">
+            <label>First Name:</label> {{ user.first_name }}
+        </div>
+        <div class="form-group">
+            <label>Last Name:</label> {{ user.last_name }}
+        </div>
+        <div class="form-group">
+            <label>Email:</label> {{ user.email }}
+            <button type="button" onclick="location.href='/change-email'" style="display: block; margin: 10px auto;">Change Email</button>
+        </div>
+        <div class="form-group">
+            {{ form.bio.label_tag }}
+            {{ form.bio }}
+        </div>
+        <div class="form-group">
+            {{ form.github.label_tag }}
+            {{ form.github }}
+        </div>
         <button type="submit">Update</button>
     </form>
     <form method="post" style="margin-top: 20px;" onsubmit="return confirmDeleteProfile();">
         {% csrf_token %}
         <button type="submit" name="delete_profile">Delete Profile</button>
     </form>
+    <button type="button" onclick="location.href='/reset-password'">Reset Password</button>
 </div>
 
 <script>
