--- a/static/home/styles.css
+++ b/static/home/styles.css
@@ -1,3 +1,5 @@
+/* static/home/styles.css */
+
 * {
     margin: 0;
     padding: 0;
@@ -12,17 +14,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .container {
-
-    width: 100%;
-    height: 100%;
-
+    width: 90%;
+    max-width: 1200px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    padding: 20px;
+    overflow: hidden;
 }
 
 h1 {
@@ -62,7 +64,6 @@ button {
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-
 }
 
 button[type="submit"] {
@@ -76,14 +77,11 @@ button[name="delete_profile"] {
 }
 
 .avatar-image {
-
     margin-bottom: 40px;
     width: 150px;
     height: 150px;
     object-fit: cover;
-
     border-radius: 94%;
-
 }
 
 .profile-button, .logout-button {
@@ -103,4 +101,37 @@ button[name="delete_profile"] {
 
 .logout-button {
     background-color: #dc3545;
+}
+
+.job-posts {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.job-post {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #9afaf6;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+.create-job-post-button {
+    margin-bottom: 30px;
+    padding: 10px 20px;
+    background-color: #00ffb2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.create-job-post-button:hover {
+    background-color: #00e6a8;
+}
+
+.job-post h3 {
+    color: #584ad7;
 }
