--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="{% static 'home/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'job_posts/create_post.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'job_posts/job_post_detail.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'job_posts/manage_job_posts.css' %}">
 </head>
 <body>
 <div class="container">
@@ -18,6 +21,19 @@
             <img src="{{ user.profile.avatar.url }}" alt="Avatar" class="avatar-image">
             <button class="profile-button" onclick="location.href='/profile'">Profile</button>
             <button class="logout-button" onclick="location.href='/logout'">Logout</button>
+            <button class="create-job-post-button" onclick="location.href='/create-job-post'">Create Job Post</button>
+            <div class="job-posts">
+                <h2>Job Posts</h2>
+                {% for post in job_posts %}
+                    <div class="job-post">
+                        <h3>{{ post.title }}</h3>
+                        <p>{{ post.description }}</p>
+                        <p><strong>Type:</strong> {{ post.get_post_type_display }}</p>
+                        <p><strong>Posted by:</strong> {{ post.user.username }}</p>
+                        <p><strong>Posted on:</strong> {{ post.created_at }}</p>
+                    </div>
+                {% endfor %}
+            </div>
         {% else %}
             <p class="welcome-user">Welcome, Sneaky User!</p>
             <button class="login-home" onclick="location.href='/login'">Login</button>
