--- a/static/profile/styles.css
+++ b/static/profile/styles.css
@@ -29,6 +29,38 @@ h1 {
     margin-bottom: 20px;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px; /* Add some space below the header */
+    position: relative;
+}
+
+.header .home-button {
+    position: absolute;
+    left: 0;
+}
+
+.header h1 {
+    margin: 0 auto;
+    text-align: center;
+    flex-grow: 1;
+}
+
+.home-button {
+
+    background-color: #abd973;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.home-button:hover {
+    background-color: #7f9c5d;
+}
+
 .avatar-preview {
     width: 150px;
     height: 150px;
@@ -39,7 +71,6 @@ h1 {
 
 .form-group {
     margin: 20px 0;
-
 }
 
 .profile-info p {
