--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 <div class="container">
-    <h1>{{ user.username }}'s Profile</h1>
+    <div class="header">
+        <button class="home-button" onclick="location.href='/'">Home</button>
+        <h1>{{ user.username }}'s Profile</h1>
+    </div>
     <img id="avatarPreview" src="{{ avatar_url }}" alt="Avatar Preview" class="avatar-preview"/>
     <form action="/profile" method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -27,7 +30,9 @@
         </div>
         <div class="form-group">
             <label>Email:</label> {{ user.email }}
-            <button type="button" onclick="location.href='/change-email'" style="display: block; margin: 10px auto;">Change Email</button>
+            <button type="button" onclick="location.href='/change-email'" style="display: block; margin: 10px auto;">
+                Change Email
+            </button>
         </div>
         <div class="form-group">
             {{ form.bio.label_tag }}
@@ -50,7 +55,8 @@
     function confirmDeleteProfile() {
         return confirm("Are you sure you want to delete your profile?");
     }
-    document.getElementById('id_avatar').addEventListener('change', function(event) {
+
+    document.getElementById('id_avatar').addEventListener('change', function (event) {
         const [file] = event.target.files;
         if (file) {
             document.getElementById('avatarPreview').src = URL.createObjectURL(file);
