--- a/static/home/styles.css
+++ b/static/home/styles.css
@@ -23,14 +23,13 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 90%;
-    max-width: 1200px;
+    width: 100%;
+    height: 100%;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     padding: 20px;
     overflow: hidden;
-    height: 80vh;
 }
 
 h1 {
@@ -193,4 +192,73 @@ button[name="delete_profile"] {
 
 .view-post:hover {
     background-color: #6f7d24;
+}
+
+.bookmark-counter {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: #f0f0f0;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.bookmark-dropdown {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.bookmark-dropdown-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.bookmark-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.bookmark-dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.bookmark-dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.bookmark-dropdown:hover .bookmark-dropdown-content {
+    display: block;
+    animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.bookmark-post {
+    background-color: #c47e0d;
+    color: white;
+    border: none;
+    padding: 25px 52px;
+    font-size: 17px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 50px;
+}
+
+.bookmark-post:hover {
+    background-color: #7a5308;
 }
