--- a/static/home/styles.css
+++ b/static/home/styles.css
@@ -1,4 +1,4 @@
-/* static/home/styles.css */
+
 
 * {
     margin: 0;
@@ -30,6 +30,7 @@ body {
     text-align: center;
     padding: 20px;
     overflow: hidden;
+    position: relative;
 }
 
 h1 {
@@ -46,7 +47,7 @@ h1 {
 }
 
 .welcome-message .welcome-user {
-    margin-bottom: 4vh;
+    margin-bottom: 20px;
 }
 
 .login-home {
@@ -261,4 +262,45 @@ button[name="delete_profile"] {
 
 .bookmark-post:hover {
     background-color: #7a5308;
+}
+
+.forum-buttons {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    gap: 10px;
+}
+.forum-buttons button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.forum-buttons button:hover {
+    background-color: #0056b3;
+}
+
+
+
+.search-bar {
+    margin: 20px 0;
+}
+.search-bar input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.search-bar button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.search-bar button:hover {
+    background-color: #0056b3;
 }
