--- a/templates/job_post_detail.html
+++ b/templates/job_post_detail.html
@@ -16,7 +16,7 @@
         <p><strong>Type:</strong> {{ post.get_post_type_display }}</p>
         <p><strong>Posted by:</strong> {{ post.user.username }}</p>
         <p><strong>Description:</strong> {{ post.description }}</p>
-        
+        <p><strong>Reference Number:</strong> {{ post.reference_number }}</p>
         <p><strong>Posted on:</strong> {{ post.created_at }}</p>
         <p><strong>Views:</strong> {{ post.views }}</p>
         
