--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
     </form>
     <div class="register-suggestion">
         <p>Maybe you don't have an account?</p>
-        <button onclick="location.href='{% url 'register' %}'" class="btn btn-primary">Register</button>
+        <button onclick="location.href=`{% url 'register' %}`" class="btn btn-primary">Register</button>
     </div>
 </div>
 </body>
