--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>So you decided to join in?</h1>
-    <form action="/register" method="post">
+    <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
             <label for="first_name">First Name:</label>
